--- a/index.html
+++ b/index.html
@@ -1,13 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./style/index.css">
+    <link rel="stylesheet" href="./style/main.css">
+    <link rel="stylesheet" href="./responsive/header.css">
+    <link rel="shortcut icon" href="./images/logo-title.png" type="image/x-icon">
+    <link rel="stylesheet" href="./responsive/responsiveindex.css">
+    <title>Xush kelibsiz! </title>
 </head>
+
 <body>
-    <h2>Salom Jasur</h2>
-    <h4> Qabul qil </h4>
+    <div class="header">
+        <div class="navigation">
+            <a href="#" class="logo">
+                <span class="logo-name">Jasurdev</span>
+            </a>
+            <ul class="list-items">
+                <li class="list-item">
+                    <a href="index.html" class="anc active">Home</a>
+                </li>
+                <li class="list-item">
+                    <a href="about.html" class="anc">About</a>
+                </li>
+                <li class="list-item">
+                    <a href="project.html" class="anc">Project</a>
+                </li>
+                <li class="list-item">
+                    <a href="contact.html" class="anc">Contakt me</a>
+                </li>
+            </ul>
+        </div>
+
+    </div>
+    <div class="home">
+        <div class="details">
+            <h4 class="hello">
+                Assalomu aleykum
+            </h4>
+            <h3>
+                Mening ismim Jasurbek
+            </h3>
+            <p class="description">
+                Lorem ipsum dolor sit amet consectetur.
+                Inventore quia architecto officia dolores perferendis.
+                Placeat nostrum quasi eos aut soluta.
+                Culpa quas laborum dolorem corrupti ipsum.
+                Sunt ullam ipsa corrupti ea nulla.
+                Lorem ipsum dolor sit amet consectetur.
+                Aspernatur laudantium impedit nobis. Modi, veniam?
+                Beatae repellat expedita fugiat repudiandae nemo?
+    
+            </p>
+        </div>
+        <div class="img-box">
+            <img src="./images/coding.jpg" alt="Rasmim">
+        </div>
+    </div>
 </body>
+
 </html>
